--- a/config_parameters.json
+++ b/config_parameters.json
@@ -1,6 +1,6 @@
 {
     "Parameters": {
-        "KeyName": "spring2023",
+        "KeyName": "aws_access_key",
         "InstanceType": "t2.micro",
         "SSHLocation": "10.0.0.1/32",
         "DBName": "wordpressdb",
